--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
-.App {
+body {
   text-align: center;
+  background-color: #61dafb;
 }
 
 .App-logo {
@@ -12,7 +13,7 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
+/*  */
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
