first styling commit

--- a/src/home.css
+++ b/src/home.css
@@ -36,6 +36,10 @@ p {
   justify-content: space-evenly;
 }
 
+.about-us-container {
+  padding-top: 40px;
+}
+
 input {
   align-items: center;
   background-color: #fee6e3;
