--- a/src/home.css
+++ b/src/home.css
@@ -163,7 +163,7 @@ button:hover {
     align-items: center;
     min-height: 260px;
     padding-top: 100px;
-    background: #3c31dd;
+    background: #99D98C;
     /* border: 100px black; */
 }
 
