--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 body {
   text-align: center;
-  background-color: #61dafb;
+  background-color: #99D98C;
 }
 
 .App-logo {
@@ -22,7 +22,7 @@ body {
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: orange;
 }
 
 .App-link {
