--- a/src/Styles/Forms.css
+++ b/src/Styles/Forms.css
@@ -1,10 +1,10 @@
 
 .form{
-	max-width: 500px;
+	width: 500px;
 	padding: 10px 20px;
 	background: #C9EBC2;
 	background: #f4f7f8;
-	margin: 10px auto;
+	margin: 10px 10px;
 	padding: 20px;
 	border-radius: 8px;
 	font-family: Georgia, "Times New Roman", Times, serif;
@@ -100,4 +100,27 @@
 .form input[type="button"]:hover
 {
 	background: #109177;
+}
+
+h2 {
+	margin-bottom: 35px; 
+}
+
+.forms-and-photos {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+}
+
+img {
+	height: 200px;
+	width: auto;
+	align-self: center;
+	justify-self: center;
+}
+
+.create-dog-section {
+	display: flex;
+	align-items: center;
+	flex-direction: column;
 }
