--- a/src/Styles/home.css
+++ b/src/Styles/home.css
@@ -19,6 +19,11 @@ p {
   font-family: 'Roboto Slab', serif;
 }
 
+.about-us-container > p {
+  max-width: 70%;
+  margin: auto;
+}
+
 a {
   font-size: 16px;
   color: #FFFFFF;
@@ -40,9 +45,10 @@ a {
 /* COMMUNITY STORIES */
 
 .story-image {
-  height: 300px;
+  height: auto;
   width: auto;
-  max-width: 340px;
+  max-height: 40%;
+  max-width: 100%;
 }
 
 .hero-image {
@@ -51,6 +57,12 @@ a {
 
 .stories {
   display: flex;
+  width: 100%;
+  justify-content: space-around;
+}
+
+.community-story {
+  width: 25%;
 }
 
 .button-container {
@@ -197,11 +209,17 @@ button:hover {
 }
 
 .heading-section {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    min-height: 260px;
-    padding-top: 100px;
-    background: #99D98C;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 260px;
+  padding-top: 100px;
+  background: #99D98C;
+}
+
+.section-title {
+  font-family: 'Rampart One', cursive;
+  font-size: 36px;
+  padding: 20px;
 }
