--- a/src/Styles/Forms.css
+++ b/src/Styles/Forms.css
@@ -1,24 +1,23 @@
-
-.form{
-	width: 500px;
-	padding: 10px 20px;
-	background: #C9EBC2;
-	background: #f4f7f8;
-	margin: 10px 10px;
-	padding: 20px;
-	border-radius: 8px;
-	font-family: Georgia, "Times New Roman", Times, serif;
+.form {
+  width: 500px;
+  padding: 10px 20px;
+  background: #c9ebc2;
+  background: #f4f7f8;
+  margin: 10px 10px;
+  padding: 20px;
+  border-radius: 8px;
+  font-family: Georgia, "Times New Roman", Times, serif;
 }
-.form fieldset{
-	border: none;
+.form fieldset {
+  border: none;
 }
 .form legend {
-	font-size: 1.4em;
-	margin-bottom: 10px;
+  font-size: 1.4em;
+  margin-bottom: 10px;
 }
 .form label {
-	display: block;
-	margin-bottom: 8px;
+  display: block;
+  margin-bottom: 8px;
 }
 .form input[type="text"],
 .form input[type="date"],
@@ -30,23 +29,23 @@
 .form input[type="url"],
 .form textarea,
 .form select {
-	font-family: Georgia, "Times New Roman", Times, serif;
-	background: rgba(255,255,255,.1);
-	border: none;
-	border-radius: 4px;
-	font-size: 15px;
-	margin: 0;
-	outline: 0;
-	padding: 10px;
-	width: 100%;
-	box-sizing: border-box; 
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box; 
-	background-color: #e8eeef;
-	color:#8a97a0;
-	-webkit-box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
-	box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
-	margin-bottom: 30px;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  background: rgba(255, 255, 255, 0.1);
+  border: none;
+  border-radius: 4px;
+  font-size: 15px;
+  margin: 0;
+  outline: 0;
+  padding: 10px;
+  width: 100%;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  background-color: #e8eeef;
+  color: #8a97a0;
+  -webkit-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.03) inset;
+  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.03) inset;
+  margin-bottom: 30px;
 }
 .form input[type="text"]:focus,
 .form input[type="date"]:focus,
@@ -57,68 +56,66 @@
 .form input[type="time"]:focus,
 .form input[type="url"]:focus,
 .form textarea:focus,
-.form select:focus{
-	background: #d2d9dd;
+.form select:focus {
+  background: #d2d9dd;
 }
-.form select{
-	-webkit-appearance: menulist-button;
-	height:35px;
+.form select {
+  -webkit-appearance: menulist-button;
+  height: 35px;
 }
 .form .number {
-	background: #1abc9c;
-	color: #fff;
-	height: 30px;
-	width: 30px;
-	display: inline-block;
-	font-size: 0.8em;
-	margin-right: 4px;
-	line-height: 30px;
-	text-align: center;
-	text-shadow: 0 1px 0 rgba(255,255,255,0.2);
-	border-radius: 15px 15px 15px 0px;
+  background: #1abc9c;
+  color: #fff;
+  height: 30px;
+  width: 30px;
+  display: inline-block;
+  font-size: 0.8em;
+  margin-right: 4px;
+  line-height: 30px;
+  text-align: center;
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.2);
+  border-radius: 15px 15px 15px 0px;
 }
 
 .form input[type="submit"],
-.button
-{
-	position: relative;
-	display: block;
-	color: #FFF;
-	margin: 0 auto;
-	background: #168AAD;
-	font-size: 18px;
-	text-align: center;
-	font-style: normal;
-	width: 100%;
-	border: 1px solid #1A759F;
-	border-width: 1px 1px 3px;
-	margin-bottom: 10px;
+.button {
+  position: relative;
+  display: block;
+  color: #fff;
+  margin: 0 auto;
+  background: #168aad;
+  font-size: 18px;
+  text-align: center;
+  font-style: normal;
+  width: 100%;
+  border: 1px solid #1a759f;
+  border-width: 1px 1px 3px;
+  margin-bottom: 10px;
 }
 .form input[type="submit"]:hover,
-.form input[type="button"]:hover
-{
-	background: #109177;
+.form input[type="button"]:hover {
+  background: #109177;
 }
 
 h2 {
-	margin-bottom: 35px; 
+  margin-bottom: 35px;
 }
 
 .forms-and-photos {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-around;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
 
 img {
-	height: 200px;
-	width: auto;
-	align-self: center;
-	justify-self: center;
+  height: 200px;
+  width: auto;
+  align-self: center;
+  justify-self: center;
 }
 
 .create-dog-section {
-	display: flex;
-	align-items: center;
-	flex-direction: column;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
